fixing css bug on Safari

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -114,6 +114,9 @@
     font-size: 2.7em;
     text-align: center;
     line-height: 1.3em;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: clip;
 }
 
 /* CLIENTS */
